Wider word lists (AJIT, MANU, RSMI), smaller Powered-by text, AJIT indirect ethical route, fix swapped SIVI/AJIT roles
